diesel_compile_tests/tests/fail/derive/bad_variadic.stderr
error: expected integer literal
 --> tests/fail/derive/bad_variadic.rs:7:16
  |
LL |     #[variadic(not_a_literal_number)]
  |                ^^^^^^^^^^^^^^^^^^^^

error: invalid variadic argument count: not enough function arguments
  --> tests/fail/derive/bad_variadic.rs:11:16
   |
LL |     #[variadic(3)]
   |                ^
